--- a/dvc.yaml
+++ b/dvc.yaml
@@ -12,3 +12,19 @@ stages:
     - scripts/extract_features.py
     outs:
     - assets/features
+  train-randomforest-regressor:
+    cmd: python scripts/train_model.py
+    deps:
+    - assets/features/train_features.csv
+    - assets/features/train_labels.csv
+    outs:
+    - assets/models
+  eval-model:
+    cmd: python scripts/eval_model.py
+    deps:
+    - assets/features/test_features.csv
+    - assets/features/test_labels.csv
+    - assets/models/model.pk
+    - scripts/eval_model.py
+    outs:
+    - assets/metrics.json
